public-ec2.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: Public EC2

Parameters:
  ec2KeyPair: 
    Description: Amazon EC2 Key Pair
    Type: "AWS::EC2::KeyPair::KeyName"

Mappings: 
  RegionMap: 
    us-east-1: 
      HVM64: "ami-00dc79254d0461090"
    us-west-1: 
      HVM64: "ami-024c80694b5b3e51a"
    eu-west-1: 
      HVM64: "ami-040ba9174949f6de4"
    ap-southeast-1: 
      HVM64: "ami-00942d7cd4f3ca5c0"
    ap-northeast-1: 
      HVM64: "ami-0064e711cbc7a825e"
Resources: 
  PublicVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.10.0.0/16
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref PublicVPC
      CidrBlock: 10.10.10.0/24
      MapPublicIpOnLaunch: true      
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: !Join [_, [!Ref 'AWS::StackName']]
        - Key: Network
          Value: Public      
  GatewayToInternet:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref PublicVPC
      InternetGatewayId: !Ref InternetGateway          
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref PublicVPC
      Tags:
        - Key: Network
          Value: Public      
  PublicRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway      
  PublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable   
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH and Notebook
      VpcId: !Ref PublicVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: '0.0.0.0/0'             
  EC2Instance: 
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: !FindInMap
        - RegionMap
        - !Ref 'AWS::Region'
        - HVM64
      InstanceType: t2.micro
      KeyName: !Ref ec2KeyPair
      NetworkInterfaces: 
        - AssociatePublicIpAddress: "true"
          DeviceIndex: "0"
          GroupSet: 
            - !Ref "InstanceSecurityGroup"
          SubnetId: 
            !Ref "PublicSubnet"      
Outputs:
  PublicIp:
    Value: !GetAtt EC2Instance.PublicIp
    Description: Ec2 public IP
